--- a/en/index.html
+++ b/en/index.html
@@ -6,14 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-        <title>bhLoveIt</title>
-        <meta name="Description" content="About bhLoveIt Theme"><meta property="og:title" content="bhLoveIt" />
+        <title>bihai.org</title>
+        <meta name="Description" content="About bhLoveIt Theme"><meta property="og:title" content="bihai.org" />
 <meta property="og:description" content="About bhLoveIt Theme" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://bihai.org/en/" />
-<meta property="og:site_name" content="bhLoveIt" />
+<meta property="og:site_name" content="bihai.org" />
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="bhLoveIt"/>
+<meta name="twitter:title" content="bihai.org"/>
 <meta name="twitter:description" content="About bhLoveIt Theme"/>
 <meta name="theme-color" content="#ffffff">
 <meta name="msapplication-TileColor" content="#da532c">
@@ -23,15 +23,15 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="alternate" href="/en/index.xml" type="application/rss+xml" title="bhLoveIt">
-    <link rel="feed" href="/en/index.xml" type="application/rss+xml" title="bhLoveIt"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><link rel="stylesheet" href="/css/style.min.css"><script type="application/ld+json">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="alternate" href="/en/index.xml" type="application/rss+xml" title="bihai.org">
+    <link rel="feed" href="/en/index.xml" type="application/rss+xml" title="bihai.org"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><link rel="stylesheet" href="/css/style.min.css"><script type="application/ld+json">
     {
         "@context": "http://schema.org",
         "@type": "WebSite",
         "url": "https:\/\/bihai.org\/en\/","inLanguage": "en","author": {
                 "@type": "Person",
                 "name": "bihai"
-            },"description": "About bhLoveIt Theme","image": "https:\/\/bihai.org\/cover.png","thumbnailUrl": "https:\/\/bihai.org\/logo.png","license": "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License.","name": "bhLoveIt"
+            },"description": "About bhLoveIt Theme","image": "https:\/\/bihai.org\/cover.png","thumbnailUrl": "https:\/\/bihai.org\/logo.png","license": "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License.","name": "bihai.org"
     }
     </script></head>
     <body><script>
@@ -42,7 +42,7 @@
         </script><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/en/">bhLoveIt</a>
+            <a href="/en/">bihai.org</a>
         </div>
         <div class="menu"><a class="menu-item" href="/en/posts/" rel="noopener noreffer">Posts</a><a class="menu-item" href="/en/tags/" rel="noopener noreffer">Tags</a><a class="menu-item" href="/en/categories/" rel="noopener noreffer">Categories</a><a class="menu-item" href="/en/categories/documentation/" rel="noopener noreffer">Docs</a><a class="menu-item" href="/en/about/" rel="noopener noreffer">About</a><a class="menu-item" href="https://github.com/bihai/bihai.org" title="GitHub" rel="noopener noreffer" target="_blank"><i class='fab fa-github fa-fw'></i></a><span class="menu-item">|</span>
             <a href="javascript:void(0);" class="menu-item theme-switch" title="">
@@ -55,7 +55,7 @@
     <div class="header-wrapper">
         <div class="header-container">
             <div class="header-title">
-                <a href="/en/">bhLoveIt</a>
+                <a href="/en/">bihai.org</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
@@ -83,7 +83,7 @@
         data-src=""
         alt="avatar"
         title="" /></a>
-        </div><h2 class="home-description"><div id="id-ad9fd1" class="typeit"></div></h2><div class="home-social-links"><a href="https://github.com/bihai" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fab fa-github-alt fa-fw"></i></a>
+        </div><h2 class="home-description"><div id="id-0af2fa" class="typeit"></div></h2><div class="home-social-links"><a href="https://github.com/bihai" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fab fa-github-alt fa-fw"></i></a>
 <a href="mailto:bihaiorg@139.com" title="Email" rel="noopener noreffer me"><i class="far fa-envelope fa-fw"></i></a>
 </div>
 </div>
@@ -110,8 +110,8 @@
             });
         });
     </script><script>
-        window.typeitArr = [["id-ad9fd1"]];
+        window.typeitArr = [["id-0af2fa"]];
     </script><script>
-        window.contentMap = {"id-ad9fd1":"A Clean, Elegant but Advanced Hugo Theme"};
+        window.contentMap = {"id-0af2fa":"A Clean, Elegant but Advanced Hugo Theme"};
     </script><link rel="stylesheet" href="/lib/lightgallery/lightgallery.min.css"><script src="/lib/smooth-scroll/smooth-scroll.polyfills.min.js"></script><script src="/lib/lazysizes/lazysizes.min.js"></script><script src="/lib/lightgallery/lightgallery.min.js"></script><script src="/lib/lightgallery/lg-thumbnail.min.js"></script><script src="/lib/lightgallery/lg-zoom.min.js"></script><script src="/lib/typeit/typeit.min.js"></script><script src="/js/theme.min.js"></script></body>
 </html>
