--- a/basic万花筒/index.html
+++ b/basic万花筒/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>BASIC万花筒 | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="BASIC万花筒" />
+        <meta name="Description" content="About bihai.org"><meta property="og:title" content="BASIC万花筒" />
 <meta property="og:description" content="A{TEXT-DECORATION: none;} A:hover{COLOR: #CC0000;} A:link {color: #0000cc;} A:visited {color: #0000aa;} BODY { FONT-SIZE: 9pt; FONT-FAMILY:tahoma; } td { FONT-SIZE: 9pt; FONT-FAMILY:tahoma; } 点赞 收藏 分享 * 文章举报 thriller 发布了19 篇原创文章 · 获赞 18 · 访问量 5万&#43; 私信 关注" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/basic%E4%B8%87%E8%8A%B1%E7%AD%92/" />
