--- a/tyche.cc-上线/index.html
+++ b/tyche.cc-上线/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>Tyche.cc 上线！ | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="Tyche.cc 上线！" />
+        <meta name="Description" content="About bihai.org"><meta property="og:title" content="Tyche.cc 上线！" />
 <meta property="og:description" content="tyche.cc = Torch your confidence, hope &amp; emotion. 点燃你的信心、希望和激情。 上次注册的tyche.cn因为忙忘了续费，被人抢注了，虽然烦了几天，但是因为.cn要求实名制，价格" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/tyche.cc-%E4%B8%8A%E7%BA%BF/" />
