--- a/xamarin-ios-示例/index.html
+++ b/xamarin-ios-示例/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>xamarin ios 示例 | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="xamarin ios 示例" />
+        <meta name="Description" content="About bihai.org"><meta property="og:title" content="xamarin ios 示例" />
 <meta property="og:description" content=")xamarin ios 示例 写了个批处理把书上附送的示例转成Visual studio工程，窃书不算偷吧。 https://github.com/bihai/xamarin_iOS_sample 点赞 收藏 分享 * 文章举报 thriller 发布了19 篇原创文章 · 获赞 18 ·" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/xamarin-ios-%E7%A4%BA%E4%BE%8B/" />
