--- a/关注微软的bash-on-windows/index.html
+++ b/关注微软的bash-on-windows/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>关注微软的“bash on windows” | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="关注微软的“bash on windows”" />
+        <meta name="Description" content="About bihai.org"><meta property="og:title" content="关注微软的“bash on windows”" />
 <meta property="og:description" content="﻿﻿ 感谢管理员！博客终于重新开通 最近在关注微软的“bash on windows”，已经装好14316和ubuntu trusty，有很多发现，慢慢" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/%E5%85%B3%E6%B3%A8%E5%BE%AE%E8%BD%AF%E7%9A%84bash-on-windows/" />
