--- a/android-j2me-联网获得html/index.html
+++ b/android-j2me-联网获得html/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>android   J2ME 联网获得html | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="android   J2ME 联网获得html" />
+        <meta name="Description" content="About bihai.org"><meta property="og:title" content="android   J2ME 联网获得html" />
 <meta property="og:description" content="JAVA CODE :android 代码： 1 2 3 4 5 6 7 8 9101112131415161718192021222324252627 28293031323334353637383940414243444546474849505152535455565758 点赞 收藏 分享 * 文章举报 thriller 发布了19 篇原创文章 · 获赞 18 · 访问量 5万&#43; 私信 关注" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/android-j2me-%E8%81%94%E7%BD%91%E8%8E%B7%E5%BE%97html/" />
