--- a/en/index.html
+++ b/en/index.html
@@ -83,7 +83,7 @@
         data-src=""
         alt="avatar"
         title="" /></a>
-        </div><h2 class="home-description"><div id="id-0af2fa" class="typeit"></div></h2><div class="home-social-links"><a href="https://github.com/bihai" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fab fa-github-alt fa-fw"></i></a>
+        </div><h2 class="home-description"><div id="id-f92fbf" class="typeit"></div></h2><div class="home-social-links"><a href="https://github.com/bihai" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fab fa-github-alt fa-fw"></i></a>
 <a href="mailto:bihaiorg@139.com" title="Email" rel="noopener noreffer me"><i class="far fa-envelope fa-fw"></i></a>
 </div>
 </div>
@@ -110,8 +110,8 @@
             });
         });
     </script><script>
-        window.typeitArr = [["id-0af2fa"]];
+        window.typeitArr = [["id-f92fbf"]];
     </script><script>
-        window.contentMap = {"id-0af2fa":"A Clean, Elegant but Advanced Hugo Theme"};
+        window.contentMap = {"id-f92fbf":"A Clean, Elegant but Advanced Hugo Theme"};
     </script><link rel="stylesheet" href="/lib/lightgallery/lightgallery.min.css"><script src="/lib/smooth-scroll/smooth-scroll.polyfills.min.js"></script><script src="/lib/lazysizes/lazysizes.min.js"></script><script src="/lib/lightgallery/lightgallery.min.js"></script><script src="/lib/lightgallery/lg-thumbnail.min.js"></script><script src="/lib/lightgallery/lg-zoom.min.js"></script><script src="/lib/typeit/typeit.min.js"></script><script src="/js/theme.min.js"></script></body>
 </html>
