--- a/j2me中用lwuit画简单的指针时钟/index.html
+++ b/j2me中用lwuit画简单的指针时钟/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>J2ME中用LWUIT画简单的指针时钟 | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="J2ME中用LWUIT画简单的指针时钟" />
+        <meta name="Description" content="About bihai.org"><meta property="og:title" content="J2ME中用LWUIT画简单的指针时钟" />
 <meta property="og:description" content="J2ME中用LWUIT画简单的指针时钟by thriller at http://tyche.cnLWUIT(The Lightweight UI Toolkit)是一个轻量级JavaME 用户界面工具包。LWUIT类似Swing 的MVC" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/j2me%E4%B8%AD%E7%94%A8lwuit%E7%94%BB%E7%AE%80%E5%8D%95%E7%9A%84%E6%8C%87%E9%92%88%E6%97%B6%E9%92%9F/" />
