--- a/j2me版太奇论语/index.html
+++ b/j2me版太奇论语/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>J2ME版太奇论语 | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="J2ME版太奇论语" />
+        <meta name="Description" content="About bihai.org"><meta property="og:title" content="J2ME版太奇论语" />
 <meta property="og:description" content="J2ME版太奇论语终于初步完成啦 这是英语版，可以学英语简单对话。 [flash=340,340]http://player.youku.com/player.php/sid/XMTIzMjg0OTA0/v.swf[/fla sh] 20天做完，大多业余时间，效率不错，而且顺便自学了下J2ME和JAVA，" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/j2me%E7%89%88%E5%A4%AA%E5%A5%87%E8%AE%BA%E8%AF%AD/" />
