--- a/ubuntu-on-windows-编译安装-stardict-3.06/index.html
+++ b/ubuntu-on-windows-编译安装-stardict-3.06/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>ubuntu on windows 编译安装 stardict 3.06 | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="ubuntu on windows 编译安装 stardict 3.06" />
+        <meta name="Description" content="About bihai.org"><meta property="og:title" content="ubuntu on windows 编译安装 stardict 3.06" />
 <meta property="og:description" content="胡正写的stardict： 星际译王——拉轰吧——目前还号称是linux下最好的词典。 胡正是四大魔幻程序员之一，虽然身体略有不适，不妨碍他的努" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/ubuntu-on-windows-%E7%BC%96%E8%AF%91%E5%AE%89%E8%A3%85-stardict-3.06/" />
