--- a/ubuntu之apache正向代理及反向代理proxypass-proxypassreverse/index.html
+++ b/ubuntu之apache正向代理及反向代理proxypass-proxypassreverse/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>ubuntu之apache正向代理及反向代理(ProxyPass ProxyPassReverse) | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="ubuntu之apache正向代理及反向代理(ProxyPass ProxyPassReverse)" />
+        <meta name="Description" content="About bihai.org"><meta property="og:title" content="ubuntu之apache正向代理及反向代理(ProxyPass ProxyPassReverse)" />
 <meta property="og:description" content="ubuntu之apache正向代理及反向代理(ProxyPass/ProxyPassReverse) 环境是UBUNTU 最新版apache2安" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/ubuntu%E4%B9%8Bapache%E6%AD%A3%E5%90%91%E4%BB%A3%E7%90%86%E5%8F%8A%E5%8F%8D%E5%90%91%E4%BB%A3%E7%90%86proxypass-proxypassreverse/" />
