--- a/weiphp-4-欢迎语bug如果是多图文则所有文章都显示第一篇/index.html
+++ b/weiphp-4-欢迎语bug如果是多图文则所有文章都显示第一篇/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>WEIPHP 4 欢迎语BUG：如果是多图文，则所有文章都显示第一篇 | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="WEIPHP 4 欢迎语BUG：如果是多图文，则所有文章都显示第一篇" />
+        <meta name="Description" content="About bihai.org"><meta property="og:title" content="WEIPHP 4 欢迎语BUG：如果是多图文，则所有文章都显示第一篇" />
 <meta property="og:description" content="WEIPHP 4 欢迎语BUG：如果是多图文，则所有文章都显示第一篇 找了半天，原来是个低级错误： 打开\Application\Home\Model\Wei" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/weiphp-4-%E6%AC%A2%E8%BF%8E%E8%AF%ADbug%E5%A6%82%E6%9E%9C%E6%98%AF%E5%A4%9A%E5%9B%BE%E6%96%87%E5%88%99%E6%89%80%E6%9C%89%E6%96%87%E7%AB%A0%E9%83%BD%E6%98%BE%E7%A4%BA%E7%AC%AC%E4%B8%80%E7%AF%87/" />
