--- a/如果不小心猜到了开心词场和百词斩的加密方法该怎么办/index.html
+++ b/如果不小心猜到了开心词场和百词斩的加密方法该怎么办/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>如果，不小心猜到了开心词场和百词斩的加密方法，该怎么办？ | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="如果，不小心猜到了开心词场和百词斩的加密方法，该怎么办？" />
+        <meta name="Description" content="About bihai.org"><meta property="og:title" content="如果，不小心猜到了开心词场和百词斩的加密方法，该怎么办？" />
 <meta property="og:description" content="@[TOC]不小心猜到了开心词场和百词斩的加密方法，该怎么办？ 猜到了开心词场和百词斩的加密算法，该怎么办？ 希望背单词 希望帮助想背单词的朋友 沪" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/%E5%A6%82%E6%9E%9C%E4%B8%8D%E5%B0%8F%E5%BF%83%E7%8C%9C%E5%88%B0%E4%BA%86%E5%BC%80%E5%BF%83%E8%AF%8D%E5%9C%BA%E5%92%8C%E7%99%BE%E8%AF%8D%E6%96%A9%E7%9A%84%E5%8A%A0%E5%AF%86%E6%96%B9%E6%B3%95%E8%AF%A5%E6%80%8E%E4%B9%88%E5%8A%9E/" />
