--- a/首次使用hookapi暴力破解sqlite3加密的数据库/index.html
+++ b/首次使用hookapi暴力破解sqlite3加密的数据库/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>首次使用HOOKAPI暴力破解SQLITE3加密的数据库 | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="首次使用HOOKAPI暴力破解SQLITE3加密的数据库" />
+        <meta name="Description" content="About bihai.org"><meta property="og:title" content="首次使用HOOKAPI暴力破解SQLITE3加密的数据库" />
 <meta property="og:description" content="怕原作者生气，在这就不放源代码了。 最近研究“给力大CI典”的时候，反汇编了一下，是用DELPHI写的，使用SQLITE3定制版本加密了一部分" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/%E9%A6%96%E6%AC%A1%E4%BD%BF%E7%94%A8hookapi%E6%9A%B4%E5%8A%9B%E7%A0%B4%E8%A7%A3sqlite3%E5%8A%A0%E5%AF%86%E7%9A%84%E6%95%B0%E6%8D%AE%E5%BA%93/" />
