--- a/index.html
+++ b/index.html
@@ -146,6 +146,13 @@
                       <h3>Orci Convallis</h3>
                     </header>
                   </article>
+                   
+                  <article class="item">
+                    <a href="post" class="image fit"><img src="img/pic07.jpg" alt="" /></a>
+                    <header>
+                      <h3>Post</h3>
+                    </header>
+                  </article>
                   
                 </div>
               </div>
