--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         data-src=""
         alt="avatar"
         title="主页" /></a>
-        </div><h2 class="home-description"><div id="id-cbc52e" class="typeit"></div></h2><div class="home-social-links"><a href="https://github.com/bihai" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fab fa-github-alt fa-fw"></i></a>
+        </div><h2 class="home-description"><div id="id-3a0302" class="typeit"></div></h2><div class="home-social-links"><a href="https://github.com/bihai" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fab fa-github-alt fa-fw"></i></a>
 <a href="https://www.zhihu.com/people/bihaiorg" title="知乎" target="_blank" rel="noopener noreffer me"><i class="loveit it-zhihu-line"></i></a>
 <a href="mailto:bihaiorg@139.com" title="Email" rel="noopener noreffer me"><i class="far fa-envelope fa-fw"></i></a>
 </div>
@@ -126,8 +126,8 @@
             });
         });
     </script><script>
-        window.typeitArr = [["id-cbc52e"]];
+        window.typeitArr = [["id-3a0302"]];
     </script><script>
-        window.contentMap = {"id-cbc52e":"一个简洁、优雅且高效的 Hugo 主题"};
+        window.contentMap = {"id-3a0302":"一个简洁、优雅且高效的 Hugo 主题"};
     </script><link rel="stylesheet" href="/lib/iconfont/iconfont.min.css"><link rel="stylesheet" href="/lib/lightgallery/lightgallery.min.css"><script src="/lib/smooth-scroll/smooth-scroll.polyfills.min.js"></script><script src="/lib/lazysizes/lazysizes.min.js"></script><script src="/lib/lightgallery/lightgallery.min.js"></script><script src="/lib/lightgallery/lg-thumbnail.min.js"></script><script src="/lib/lightgallery/lg-zoom.min.js"></script><script src="/lib/typeit/typeit.min.js"></script><script src="/js/theme.min.js"></script></body>
 </html>
