--- a/en/index.html
+++ b/en/index.html
@@ -83,7 +83,7 @@
         data-src=""
         alt="avatar"
         title="Home" /></a>
-        </div><h2 class="home-description"><div id="id-a736c9" class="typeit"></div></h2><div class="home-social-links"><a href="https://github.com/bihai" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fab fa-github-alt fa-fw"></i></a>
+        </div><h2 class="home-description"><div id="id-b14b9e" class="typeit"></div></h2><div class="home-social-links"><a href="https://github.com/bihai" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fab fa-github-alt fa-fw"></i></a>
 <a href="mailto:bihaiorg@139.com" title="Email" rel="noopener noreffer me"><i class="far fa-envelope fa-fw"></i></a>
 </div>
 </div>
@@ -110,8 +110,8 @@
             });
         });
     </script><script>
-        window.typeitArr = [["id-a736c9"]];
+        window.typeitArr = [["id-b14b9e"]];
     </script><script>
-        window.contentMap = {"id-a736c9":"A Clean, Elegant but Advanced Hugo Theme"};
+        window.contentMap = {"id-b14b9e":"A Clean, Elegant but Advanced Hugo Theme"};
     </script><link rel="stylesheet" href="/blog/lib/lightgallery/lightgallery.min.css"><script src="/blog/lib/smooth-scroll/smooth-scroll.polyfills.min.js"></script><script src="/blog/lib/lazysizes/lazysizes.min.js"></script><script src="/blog/lib/lightgallery/lightgallery.min.js"></script><script src="/blog/lib/lightgallery/lg-thumbnail.min.js"></script><script src="/blog/lib/lightgallery/lg-zoom.min.js"></script><script src="/blog/lib/typeit/typeit.min.js"></script><script src="/blog/js/theme.min.js"></script></body>
 </html>
