--- a/bash-for-windows-运行geany/index.html
+++ b/bash-for-windows-运行geany/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>bash for windows 运行Geany | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="bash for windows 运行Geany" />
+        <meta name="Description" content="关于 bihai.org"><meta property="og:title" content="bash for windows 运行Geany" />
 <meta property="og:description" content="Win 10运行Geany for linux 1、打开bash 2、安装geany apt-get install geany* 3、安装Xming https://sourceforge.net/projects/xming/ 4、安装x11 apt-get install libX11-dev libXext-dev libXtst-dev libXrender-dev libxmu-dev libxmuu-dev msttcorefonts gtk2-engines-pixbuf``` 5、运行geany $ geany" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/bash-for-windows-%E8%BF%90%E8%A1%8Cgeany/" />
