--- a/ubuntu-安装freebasic/index.html
+++ b/ubuntu-安装freebasic/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>ubuntu 安装freebasic | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="ubuntu 安装freebasic" />
+        <meta name="Description" content="关于 bihai.org"><meta property="og:title" content="ubuntu 安装freebasic" />
 <meta property="og:description" content="apt-get install libx11-dev libXext-dev libxpm-dev libxrandr-dev libxrender-dev libncurses5-dev 点赞 收藏 分享 * 文章举报 thriller 发布了19 篇原创文章 · 获赞 18 · 访问量 5万&#43; 私信 关注" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/ubuntu-%E5%AE%89%E8%A3%85freebasic/" />
