--- a/ubuntu14.04-安装配置jdk/index.html
+++ b/ubuntu14.04-安装配置jdk/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>ubuntu14.04 安装配置JDK | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="ubuntu14.04 安装配置JDK" />
+        <meta name="Description" content="关于 bihai.org"><meta property="og:title" content="ubuntu14.04 安装配置JDK" />
 <meta property="og:description" content="1,下载jdk-7u45-linux-x64.tar.gz 网址： http://www.oracle.com/technetwork/java/javase/downloads/index.html 2, 解压JDK 进入JDK的下载目录 sudo tar zxvf jdk-8u91-linux-x64.tar.gz -C ~/jdk/ （8u91代表版本号，请自行修" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/ubuntu14.04-%E5%AE%89%E8%A3%85%E9%85%8D%E7%BD%AEjdk/" />
