--- a/疫情期间自我修炼-搞一搞老游戏资源解包/index.html
+++ b/疫情期间自我修炼-搞一搞老游戏资源解包/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>疫情期间自我修炼, 搞一搞老游戏资源解包 | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="疫情期间自我修炼, 搞一搞老游戏资源解包" />
+        <meta name="Description" content="关于 bihai.org"><meta property="og:title" content="疫情期间自我修炼, 搞一搞老游戏资源解包" />
 <meta property="og:description" content="疫情期间自我修炼, 准备搞一搞老游戏资源解包, 修旧利废，聊以自慰。首先对不住的是大雨资讯的《大富翁》系列，挑了几个感兴趣的解包完毕： 1-3是D" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/%E7%96%AB%E6%83%85%E6%9C%9F%E9%97%B4%E8%87%AA%E6%88%91%E4%BF%AE%E7%82%BC-%E6%90%9E%E4%B8%80%E6%90%9E%E8%80%81%E6%B8%B8%E6%88%8F%E8%B5%84%E6%BA%90%E8%A7%A3%E5%8C%85/" />
