--- a/破解了xxtea加密的大富翁9资源文件/index.html
+++ b/破解了xxtea加密的大富翁9资源文件/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>破解了XXTEA加密的《大富翁9》资源文件 | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="破解了XXTEA加密的《大富翁9》资源文件" />
+        <meta name="Description" content="关于 bihai.org"><meta property="og:title" content="破解了XXTEA加密的《大富翁9》资源文件" />
 <meta property="og:description" content="破解了XXTEA加密的《大富翁9》资源文件 没啥可以高兴的，只是比较好奇而已。 这种加密还是不错，快速简单，可以规避一般的恶意破解。 挺满意呵呵。" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/%E7%A0%B4%E8%A7%A3%E4%BA%86xxtea%E5%8A%A0%E5%AF%86%E7%9A%84%E5%A4%A7%E5%AF%8C%E7%BF%819%E8%B5%84%E6%BA%90%E6%96%87%E4%BB%B6/" />
