--- a/404.html
+++ b/404.html
@@ -6,14 +6,14 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>404 页面没找到 | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="关于 bhLoveIt 主题" />
+        <meta name="Description" content="关于 bihai.org"><meta property="og:title" content="404 Page not found" />
+<meta property="og:description" content="关于 bihai.org" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://bihai.org/404.html" />
 <meta property="og:site_name" content="bihai.org" />
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="关于 bhLoveIt 主题"/>
+<meta name="twitter:description" content="关于 bihai.org"/>
 <meta name="theme-color" content="#ffffff">
 <meta name="msapplication-TileColor" content="#da532c">
 <link rel="canonical" href="https://bihai.org/404.html" />
