--- a/ios-toolchain-for-bash-on-windows/index.html
+++ b/ios-toolchain-for-bash-on-windows/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>iOS toolchain for bash on windows | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="iOS toolchain for bash on windows" />
+        <meta name="Description" content="关于 bihai.org"><meta property="og:title" content="iOS toolchain for bash on windows" />
 <meta property="og:description" content="** Bash on windows 可以生成iOS或者Mac应用，WOW! ** git clone --recursive https://github.com/waneck/linux-ios-toolchain.git cd linux-ios-toolchain sudo apt-get install gcc g&#43;&#43; clang libclang-dev uuid-dev libssl-dev libpng12-dev libicu-dev bison flex libsqlite3-dev libtool llvm-dev libxml2-dev automake pkg-config make sudo make install #下载toolchain4: git clone https://github.com/javacom/toolchain4.git" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/ios-toolchain-for-bash-on-windows/" />
