--- a/logo1_.exe-木马-病毒的清除和免疫/index.html
+++ b/logo1_.exe-木马-病毒的清除和免疫/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>Logo1_.exe 木马 病毒的清除和免疫 | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="Logo1_.exe 木马 病毒的清除和免疫" />
+        <meta name="Description" content="关于 bihai.org"><meta property="og:title" content="Logo1_.exe 木马 病毒的清除和免疫" />
 <meta property="og:description" content="关于 Logo1_.exe（W32/HLLP.Philis.g trojan.pwsteal.gen ） 病毒解决方案及免疫补丁的制作！W32/HLLP.Philis.g 病毒，最近发" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/logo1_.exe-%E6%9C%A8%E9%A9%AC-%E7%97%85%E6%AF%92%E7%9A%84%E6%B8%85%E9%99%A4%E5%92%8C%E5%85%8D%E7%96%AB/" />
