--- a/shell-脚本中经常要用到ssh怎么能不交互的输密码呢/index.html
+++ b/shell-脚本中经常要用到ssh怎么能不交互的输密码呢/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>shell 脚本中经常要用到ssh。怎么能不交互的输密码呢？ | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="shell 脚本中经常要用到ssh。怎么能不交互的输密码呢？" />
+        <meta name="Description" content="关于 bihai.org"><meta property="og:title" content="shell 脚本中经常要用到ssh。怎么能不交互的输密码呢？" />
 <meta property="og:description" content="1、登录A机器 2、 ssh-keygen -t [rsa|dsa] ，将会在~/.ssh下生成密钥文件和私钥文件 id_rsa,id_rsa.pub 或 id_dsa,id_dsa.pub 3、将 .pub 文件复制到B机器的 .ssh 目录， 并 cat id_dsa.pub &gt;&gt; ~/.ssh/authorized_keys 4、大功告成，从A机器" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/shell-%E8%84%9A%E6%9C%AC%E4%B8%AD%E7%BB%8F%E5%B8%B8%E8%A6%81%E7%94%A8%E5%88%B0ssh%E6%80%8E%E4%B9%88%E8%83%BD%E4%B8%8D%E4%BA%A4%E4%BA%92%E7%9A%84%E8%BE%93%E5%AF%86%E7%A0%81%E5%91%A2/" />
