--- a/ubuntu-安装黑客背单词reciteword/index.html
+++ b/ubuntu-安装黑客背单词reciteword/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>Ubuntu 安装黑客背单词Reciteword | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="Ubuntu 安装黑客背单词Reciteword" />
+        <meta name="Description" content="关于 bihai.org"><meta property="og:title" content="Ubuntu 安装黑客背单词Reciteword" />
 <meta property="og:description" content="Reciteword是一款中文界面的背单词软件（也称黑客背单词），功能比较强大。在Ubuntu中安装可能会遇到一些小困难，故在此说明一下。 本" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/ubuntu-%E5%AE%89%E8%A3%85%E9%BB%91%E5%AE%A2%E8%83%8C%E5%8D%95%E8%AF%8Dreciteword/" />
