--- a/使用-git-hook-实现网站的自动部署/index.html
+++ b/使用-git-hook-实现网站的自动部署/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>使用 Git Hook 实现网站的自动部署 | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="使用 Git Hook 实现网站的自动部署" />
+        <meta name="Description" content="关于 bihai.org"><meta property="og:title" content="使用 Git Hook 实现网站的自动部署" />
 <meta property="og:description" content="自动化能解放人类的双手，而且更重要的是，因为按照规定的流程来走，也减少了很多误操作的产生。不知道大家平时都是怎么样更新自己生产环境的代码的，" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/%E4%BD%BF%E7%94%A8-git-hook-%E5%AE%9E%E7%8E%B0%E7%BD%91%E7%AB%99%E7%9A%84%E8%87%AA%E5%8A%A8%E9%83%A8%E7%BD%B2/" />
