--- a/利用bash-on-windows安装配置emscripten/index.html
+++ b/利用bash-on-windows安装配置emscripten/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>利用“bash on windows”安装配置emscripten | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="利用“bash on windows”安装配置emscripten" />
+        <meta name="Description" content="关于 bihai.org"><meta property="og:title" content="利用“bash on windows”安装配置emscripten" />
 <meta property="og:description" content="利用“bash on windows”安装配置emscripten 配置使用bash on windows： 1） 所有设置、更新和安全、针对开发人员、开发人" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/%E5%88%A9%E7%94%A8bash-on-windows%E5%AE%89%E8%A3%85%E9%85%8D%E7%BD%AEemscripten/" />
