--- a/国内镜像大全部分/index.html
+++ b/国内镜像大全部分/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>国内镜像大全（部分） | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="国内镜像大全（部分）" />
+        <meta name="Description" content="关于 bihai.org"><meta property="og:title" content="国内镜像大全（部分）" />
 <meta property="og:description" content="国内镜像大全 http://mirrors.neusoft.edu.cn/ 源名称 文件总数量 文件总大小 上次同步成功时间 当前状态 配置说明 centos 93536 131.15 GB 2016-09-16 04:04:21 CST 同步失败 _ _ epel 149517 146.75 GB 2016-09-16 07:50:10 CST 同步成功 _ _ atomic 30739 17.96 GB 2016-09-16 07:50:24 CST 同" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/%E5%9B%BD%E5%86%85%E9%95%9C%E5%83%8F%E5%A4%A7%E5%85%A8%E9%83%A8%E5%88%86/" />
