--- a/越狱之后如何远程连接sshios设备/index.html
+++ b/越狱之后如何远程连接sshios设备/index.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>越狱之后如何远程连接（SSH）iOS设备？ | bihai.org</title>
-        <meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="越狱之后如何远程连接（SSH）iOS设备？" />
+        <meta name="Description" content="关于 bihai.org"><meta property="og:title" content="越狱之后如何远程连接（SSH）iOS设备？" />
 <meta property="og:description" content="使用linux-ios-toolchain 在bash on windows中安装iOS软件，需要越狱的IPHONE或者IPAD，怎么安装呢？大家都" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/%E8%B6%8A%E7%8B%B1%E4%B9%8B%E5%90%8E%E5%A6%82%E4%BD%95%E8%BF%9C%E7%A8%8B%E8%BF%9E%E6%8E%A5sshios%E8%AE%BE%E5%A4%87/" />
