--- a/about/index.html
+++ b/about/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="/blog/blog/posts/"> 所有文章 </a><a class="menu-item" href="/blog/blog/tags/"> 标签 </a><a class="menu-item" href="/blog/blog/categories/"> 分类 </a><a class="menu-item" href="/blog/blog/categories/documentation/"> 文档 </a><a class="menu-item" href="/blog/blog/about/"> 关于 </a><a class="menu-item" href="https://github.com/bihai/bihai.org" title="GitHub" rel="noopener noreffer" target="_blank"><i class='fab fa-github fa-fw'></i>  </a><span class="menu-item delimiter"></span><a href="javascript:void(0);" class="menu-item language" title="选择语言">简体中文<i class="fas fa-chevron-right fa-fw"></i>
-                        <select class="language-select" id="language-select-desktop" onchange="location = this.value;"><option value="/blog/en/about/">English</option><option value="/blog/about/" selected>简体中文</option><option value="/blog/fr/about/">Français</option></select>
+                        <select class="language-select" id="language-select-desktop" onchange="location = this.value;"><option value="/blog/about/" selected>简体中文</option><option value="/blog/fr/about/">Français</option></select>
                     </a><a href="javascript:void(0);" class="menu-item theme-switch" title="切换主题">
                     <i class="fas fa-adjust fa-fw"></i>
                 </a>
@@ -64,7 +64,7 @@
         <div class="menu" id="menu-mobile"><a class="menu-item" href="/blog/blog/posts/" title="">所有文章</a><a class="menu-item" href="/blog/blog/tags/" title="">标签</a><a class="menu-item" href="/blog/blog/categories/" title="">分类</a><a class="menu-item" href="/blog/blog/categories/documentation/" title="">文档</a><a class="menu-item" href="/blog/blog/about/" title="">关于</a><a class="menu-item" href="https://github.com/bihai/bihai.org" title="GitHub" rel="noopener noreffer" target="_blank"><i class='fab fa-github fa-fw'></i></a><a href="javascript:void(0);" class="menu-item theme-switch" title="切换主题">
                 <i class="fas fa-adjust fa-fw"></i>
             </a><a href="javascript:void(0);" class="menu-item" title="选择语言">简体中文<i class="fas fa-chevron-right fa-fw"></i>
-                    <select class="language-select" onchange="location = this.value;"><option value="/blog/en/about/">English</option><option value="/blog/about/" selected>简体中文</option><option value="/blog/fr/about/">Français</option></select>
+                    <select class="language-select" onchange="location = this.value;"><option value="/blog/about/" selected>简体中文</option><option value="/blog/fr/about/">Français</option></select>
                 </a></div>
     </div>
 </header>
