--- a/fr/theme-documentation-content/index.html
+++ b/fr/theme-documentation-content/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="/blog/fr/blog/posts/"> Postes </a><a class="menu-item" href="/blog/fr/blog/tags/"> Balises </a><a class="menu-item" href="/blog/fr/blog/categories/"> Catégories </a><a class="menu-item" href="/blog/fr/blog/categories/documentation/"> Docs </a><a class="menu-item" href="/blog/fr/blog/about/"> À propos </a><a class="menu-item" href="https://github.com/bihai/bihai.org" title="GitHub" rel="noopener noreffer" target="_blank"><i class='fab fa-github fa-fw'></i>  </a><span class="menu-item delimiter"></span><a href="javascript:void(0);" class="menu-item language" title="Choisir la langue">Français<i class="fas fa-chevron-right fa-fw"></i>
-                        <select class="language-select" id="language-select-desktop" onchange="location = this.value;"><option value="/blog/en/theme-documentation-content/">English</option><option value="/blog/theme-documentation-content/">简体中文</option><option value="/blog/fr/theme-documentation-content/" selected>Français</option></select>
+                        <select class="language-select" id="language-select-desktop" onchange="location = this.value;"><option value="/blog/theme-documentation-content/">简体中文</option><option value="/blog/fr/theme-documentation-content/" selected>Français</option></select>
                     </a><a href="javascript:void(0);" class="menu-item theme-switch" title="Changer de Thème">
                     <i class="fas fa-adjust fa-fw"></i>
                 </a>
@@ -71,7 +71,7 @@
         <div class="menu" id="menu-mobile"><a class="menu-item" href="/blog/fr/blog/posts/" title="">Postes</a><a class="menu-item" href="/blog/fr/blog/tags/" title="">Balises</a><a class="menu-item" href="/blog/fr/blog/categories/" title="">Catégories</a><a class="menu-item" href="/blog/fr/blog/categories/documentation/" title="">Docs</a><a class="menu-item" href="/blog/fr/blog/about/" title="">À propos</a><a class="menu-item" href="https://github.com/bihai/bihai.org" title="GitHub" rel="noopener noreffer" target="_blank"><i class='fab fa-github fa-fw'></i></a><a href="javascript:void(0);" class="menu-item theme-switch" title="Changer de Thème">
                 <i class="fas fa-adjust fa-fw"></i>
             </a><a href="javascript:void(0);" class="menu-item" title="Choisir la langue">Français<i class="fas fa-chevron-right fa-fw"></i>
-                    <select class="language-select" onchange="location = this.value;"><option value="/blog/en/theme-documentation-content/">English</option><option value="/blog/theme-documentation-content/">简体中文</option><option value="/blog/fr/theme-documentation-content/" selected>Français</option></select>
+                    <select class="language-select" onchange="location = this.value;"><option value="/blog/theme-documentation-content/">简体中文</option><option value="/blog/fr/theme-documentation-content/" selected>Français</option></select>
                 </a></div>
     </div>
 </header>
