--- a/ubuntu14.04-安装配置jdk/index.html
+++ b/ubuntu14.04-安装配置jdk/index.html
@@ -5,16 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-        <title>ubuntu14.04 安装配置JDK - bihai.org</title><meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="ubuntu14.04 安装配置JDK" />
+        <title>ubuntu14.04 安装配置JDK - bihai.org-碧海瓯阁</title><meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="ubuntu14.04 安装配置JDK" />
 <meta property="og:description" content="1,下载jdk-7u45-linux-x64.tar.gz 网址： http://www.oracle.com/technetwork/java/javase/downloads/index.html 2, 解压JDK 进入JDK的下载目录 sudo tar zxvf jdk-8u91-linux-x64.tar.gz -C ~/jdk/ （8u91代表版本号，请自行修" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/ubuntu14.04-%E5%AE%89%E8%A3%85%E9%85%8D%E7%BD%AEjdk/" />
-<meta property="og:site_name" content="bihai.org" />
+<meta property="og:site_name" content="bihai.org-碧海瓯阁" />
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="ubuntu14.04 安装配置JDK"/>
 <meta name="twitter:description" content="1,下载jdk-7u45-linux-x64.tar.gz 网址： http://www.oracle.com/technetwork/java/javase/downloads/index.html 2, 解压JDK 进入JDK的下载目录 sudo tar zxvf jdk-8u91-linux-x64.tar.gz -C ~/jdk/ （8u91代表版本号，请自行修"/>
-<meta name="application-name" content="bihai.org">
-<meta name="apple-mobile-web-app-title" content="bihai.org"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+<meta name="application-name" content="bihai.org-碧海瓯阁">
+<meta name="apple-mobile-web-app-title" content="bihai.org-碧海瓯阁"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://bihai.org/ubuntu14.04-%E5%AE%89%E8%A3%85%E9%85%8D%E7%BD%AEjdk/" /><link rel="prev" href="https://bihai.org/ubuntu%E4%B9%8Bapache%E6%AD%A3%E5%90%91%E4%BB%A3%E7%90%86%E5%8F%8A%E5%8F%8D%E5%90%91%E4%BB%A3%E7%90%86proxypass-proxypassreverse/" /><link rel="next" href="https://bihai.org/ubuntu-%E5%AE%89%E8%A3%85%E9%BB%91%E5%AE%A2%E8%83%8C%E5%8D%95%E8%AF%8Dreciteword/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><script type="application/ld+json">
     {
@@ -39,7 +39,7 @@
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="bihai.org">bihai.org</a>
+            <a href="/" title="bihai.org-碧海瓯阁">bihai.org-碧海瓯阁</a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="/posts/"> 所有文章 </a><a class="menu-item" href="/tags/"> 标签 </a><a class="menu-item" href="/categories/"> 分类 </a><a class="menu-item" href="/categories/documentation/"> 文档 </a><a class="menu-item" href="/about/"> 关于 </a><a class="menu-item" href="https://github.com/bihai/bihai.org" title="GitHub" rel="noopener noreffer" target="_blank"><i class='fab fa-github fa-fw'></i>  </a><span class="menu-item delimiter"></span><a href="javascript:void(0);" class="menu-item language" title="选择语言">简体中文<i class="fas fa-chevron-right fa-fw"></i>
@@ -54,7 +54,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="bihai.org">bihai.org</a>
+                <a href="/" title="bihai.org-碧海瓯阁">bihai.org-碧海瓯阁</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
