--- a/weiphp-4-欢迎语bug如果是多图文则所有文章都显示第一篇/index.html
+++ b/weiphp-4-欢迎语bug如果是多图文则所有文章都显示第一篇/index.html
@@ -5,16 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-        <title>WEIPHP 4 欢迎语BUG：如果是多图文，则所有文章都显示第一篇 - bihai.org</title><meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="WEIPHP 4 欢迎语BUG：如果是多图文，则所有文章都显示第一篇" />
+        <title>WEIPHP 4 欢迎语BUG：如果是多图文，则所有文章都显示第一篇 - bihai.org-碧海瓯阁</title><meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="WEIPHP 4 欢迎语BUG：如果是多图文，则所有文章都显示第一篇" />
 <meta property="og:description" content="WEIPHP 4 欢迎语BUG：如果是多图文，则所有文章都显示第一篇 找了半天，原来是个低级错误： 打开\Application\Home\Model\Wei" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/weiphp-4-%E6%AC%A2%E8%BF%8E%E8%AF%ADbug%E5%A6%82%E6%9E%9C%E6%98%AF%E5%A4%9A%E5%9B%BE%E6%96%87%E5%88%99%E6%89%80%E6%9C%89%E6%96%87%E7%AB%A0%E9%83%BD%E6%98%BE%E7%A4%BA%E7%AC%AC%E4%B8%80%E7%AF%87/" />
-<meta property="og:site_name" content="bihai.org" />
+<meta property="og:site_name" content="bihai.org-碧海瓯阁" />
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="WEIPHP 4 欢迎语BUG：如果是多图文，则所有文章都显示第一篇"/>
 <meta name="twitter:description" content="WEIPHP 4 欢迎语BUG：如果是多图文，则所有文章都显示第一篇 找了半天，原来是个低级错误： 打开\Application\Home\Model\Wei"/>
-<meta name="application-name" content="bihai.org">
-<meta name="apple-mobile-web-app-title" content="bihai.org"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+<meta name="application-name" content="bihai.org-碧海瓯阁">
+<meta name="apple-mobile-web-app-title" content="bihai.org-碧海瓯阁"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://bihai.org/weiphp-4-%E6%AC%A2%E8%BF%8E%E8%AF%ADbug%E5%A6%82%E6%9E%9C%E6%98%AF%E5%A4%9A%E5%9B%BE%E6%96%87%E5%88%99%E6%89%80%E6%9C%89%E6%96%87%E7%AB%A0%E9%83%BD%E6%98%BE%E7%A4%BA%E7%AC%AC%E4%B8%80%E7%AF%87/" /><link rel="prev" href="https://bihai.org/xamarin-ios-%E7%A4%BA%E4%BE%8B/" /><link rel="next" href="https://bihai.org/ubuntu%E4%B9%8Bapache%E6%AD%A3%E5%90%91%E4%BB%A3%E7%90%86%E5%8F%8A%E5%8F%8D%E5%90%91%E4%BB%A3%E7%90%86proxypass-proxypassreverse/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><script type="application/ld+json">
     {
@@ -39,7 +39,7 @@
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="bihai.org">bihai.org</a>
+            <a href="/" title="bihai.org-碧海瓯阁">bihai.org-碧海瓯阁</a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="/posts/"> 所有文章 </a><a class="menu-item" href="/tags/"> 标签 </a><a class="menu-item" href="/categories/"> 分类 </a><a class="menu-item" href="/categories/documentation/"> 文档 </a><a class="menu-item" href="/about/"> 关于 </a><a class="menu-item" href="https://github.com/bihai/bihai.org" title="GitHub" rel="noopener noreffer" target="_blank"><i class='fab fa-github fa-fw'></i>  </a><span class="menu-item delimiter"></span><a href="javascript:void(0);" class="menu-item language" title="选择语言">简体中文<i class="fas fa-chevron-right fa-fw"></i>
@@ -54,7 +54,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="bihai.org">bihai.org</a>
+                <a href="/" title="bihai.org-碧海瓯阁">bihai.org-碧海瓯阁</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
