--- a/使用-git-hook-实现网站的自动部署/index.html
+++ b/使用-git-hook-实现网站的自动部署/index.html
@@ -5,16 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-        <title>使用 Git Hook 实现网站的自动部署 - bihai.org</title><meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="使用 Git Hook 实现网站的自动部署" />
+        <title>使用 Git Hook 实现网站的自动部署 - bihai.org-碧海瓯阁</title><meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="使用 Git Hook 实现网站的自动部署" />
 <meta property="og:description" content="自动化能解放人类的双手，而且更重要的是，因为按照规定的流程来走，也减少了很多误操作的产生。不知道大家平时都是怎么样更新自己生产环境的代码的，" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/%E4%BD%BF%E7%94%A8-git-hook-%E5%AE%9E%E7%8E%B0%E7%BD%91%E7%AB%99%E7%9A%84%E8%87%AA%E5%8A%A8%E9%83%A8%E7%BD%B2/" />
-<meta property="og:site_name" content="bihai.org" />
+<meta property="og:site_name" content="bihai.org-碧海瓯阁" />
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="使用 Git Hook 实现网站的自动部署"/>
 <meta name="twitter:description" content="自动化能解放人类的双手，而且更重要的是，因为按照规定的流程来走，也减少了很多误操作的产生。不知道大家平时都是怎么样更新自己生产环境的代码的，"/>
-<meta name="application-name" content="bihai.org">
-<meta name="apple-mobile-web-app-title" content="bihai.org"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+<meta name="application-name" content="bihai.org-碧海瓯阁">
+<meta name="apple-mobile-web-app-title" content="bihai.org-碧海瓯阁"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://bihai.org/%E4%BD%BF%E7%94%A8-git-hook-%E5%AE%9E%E7%8E%B0%E7%BD%91%E7%AB%99%E7%9A%84%E8%87%AA%E5%8A%A8%E9%83%A8%E7%BD%B2/" /><link rel="prev" href="https://bihai.org/%E5%85%B3%E6%B3%A8%E5%BE%AE%E8%BD%AF%E7%9A%84bash-on-windows/" /><link rel="next" href="https://bihai.org/xamarin-ios-%E7%A4%BA%E4%BE%8B/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><script type="application/ld+json">
     {
@@ -39,7 +39,7 @@
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="bihai.org">bihai.org</a>
+            <a href="/" title="bihai.org-碧海瓯阁">bihai.org-碧海瓯阁</a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="/posts/"> 所有文章 </a><a class="menu-item" href="/tags/"> 标签 </a><a class="menu-item" href="/categories/"> 分类 </a><a class="menu-item" href="/categories/documentation/"> 文档 </a><a class="menu-item" href="/about/"> 关于 </a><a class="menu-item" href="https://github.com/bihai/bihai.org" title="GitHub" rel="noopener noreffer" target="_blank"><i class='fab fa-github fa-fw'></i>  </a><span class="menu-item delimiter"></span><a href="javascript:void(0);" class="menu-item language" title="选择语言">简体中文<i class="fas fa-chevron-right fa-fw"></i>
@@ -54,7 +54,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="bihai.org">bihai.org</a>
+                <a href="/" title="bihai.org-碧海瓯阁">bihai.org-碧海瓯阁</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
