--- a/利用bash-on-windows安装配置emscripten/index.html
+++ b/利用bash-on-windows安装配置emscripten/index.html
@@ -5,16 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-        <title>利用“bash on windows”安装配置emscripten - bihai.org</title><meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="利用“bash on windows”安装配置emscripten" />
+        <title>利用“bash on windows”安装配置emscripten - bihai.org-碧海瓯阁</title><meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="利用“bash on windows”安装配置emscripten" />
 <meta property="og:description" content="利用“bash on windows”安装配置emscripten 配置使用bash on windows： 1） 所有设置、更新和安全、针对开发人员、开发人" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/%E5%88%A9%E7%94%A8bash-on-windows%E5%AE%89%E8%A3%85%E9%85%8D%E7%BD%AEemscripten/" />
-<meta property="og:site_name" content="bihai.org" />
+<meta property="og:site_name" content="bihai.org-碧海瓯阁" />
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="利用“bash on windows”安装配置emscripten"/>
 <meta name="twitter:description" content="利用“bash on windows”安装配置emscripten 配置使用bash on windows： 1） 所有设置、更新和安全、针对开发人员、开发人"/>
-<meta name="application-name" content="bihai.org">
-<meta name="apple-mobile-web-app-title" content="bihai.org"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+<meta name="application-name" content="bihai.org-碧海瓯阁">
+<meta name="apple-mobile-web-app-title" content="bihai.org-碧海瓯阁"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://bihai.org/%E5%88%A9%E7%94%A8bash-on-windows%E5%AE%89%E8%A3%85%E9%85%8D%E7%BD%AEemscripten/" /><link rel="prev" href="https://bihai.org/%E5%9B%BD%E5%86%85%E9%95%9C%E5%83%8F%E5%A4%A7%E5%85%A8%E9%83%A8%E5%88%86/" /><link rel="next" href="https://bihai.org/%E5%85%B3%E6%B3%A8%E5%BE%AE%E8%BD%AF%E7%9A%84bash-on-windows/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><script type="application/ld+json">
     {
@@ -39,7 +39,7 @@
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="bihai.org">bihai.org</a>
+            <a href="/" title="bihai.org-碧海瓯阁">bihai.org-碧海瓯阁</a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="/posts/"> 所有文章 </a><a class="menu-item" href="/tags/"> 标签 </a><a class="menu-item" href="/categories/"> 分类 </a><a class="menu-item" href="/categories/documentation/"> 文档 </a><a class="menu-item" href="/about/"> 关于 </a><a class="menu-item" href="https://github.com/bihai/bihai.org" title="GitHub" rel="noopener noreffer" target="_blank"><i class='fab fa-github fa-fw'></i>  </a><span class="menu-item delimiter"></span><a href="javascript:void(0);" class="menu-item language" title="选择语言">简体中文<i class="fas fa-chevron-right fa-fw"></i>
@@ -54,7 +54,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="bihai.org">bihai.org</a>
+                <a href="/" title="bihai.org-碧海瓯阁">bihai.org-碧海瓯阁</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
