--- a/如果不小心猜到了开心词场和百词斩的加密方法该怎么办/index.html
+++ b/如果不小心猜到了开心词场和百词斩的加密方法该怎么办/index.html
@@ -5,16 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-        <title>如果，不小心猜到了开心词场和百词斩的加密方法，该怎么办？ - bihai.org</title><meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="如果，不小心猜到了开心词场和百词斩的加密方法，该怎么办？" />
+        <title>如果，不小心猜到了开心词场和百词斩的加密方法，该怎么办？ - bihai.org-碧海瓯阁</title><meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="如果，不小心猜到了开心词场和百词斩的加密方法，该怎么办？" />
 <meta property="og:description" content="@[TOC]不小心猜到了开心词场和百词斩的加密方法，该怎么办？ 猜到了开心词场和百词斩的加密算法，该怎么办？ 希望背单词 希望帮助想背单词的朋友 沪" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/%E5%A6%82%E6%9E%9C%E4%B8%8D%E5%B0%8F%E5%BF%83%E7%8C%9C%E5%88%B0%E4%BA%86%E5%BC%80%E5%BF%83%E8%AF%8D%E5%9C%BA%E5%92%8C%E7%99%BE%E8%AF%8D%E6%96%A9%E7%9A%84%E5%8A%A0%E5%AF%86%E6%96%B9%E6%B3%95%E8%AF%A5%E6%80%8E%E4%B9%88%E5%8A%9E/" />
-<meta property="og:site_name" content="bihai.org" />
+<meta property="og:site_name" content="bihai.org-碧海瓯阁" />
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="如果，不小心猜到了开心词场和百词斩的加密方法，该怎么办？"/>
 <meta name="twitter:description" content="@[TOC]不小心猜到了开心词场和百词斩的加密方法，该怎么办？ 猜到了开心词场和百词斩的加密算法，该怎么办？ 希望背单词 希望帮助想背单词的朋友 沪"/>
-<meta name="application-name" content="bihai.org">
-<meta name="apple-mobile-web-app-title" content="bihai.org"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+<meta name="application-name" content="bihai.org-碧海瓯阁">
+<meta name="apple-mobile-web-app-title" content="bihai.org-碧海瓯阁"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://bihai.org/%E5%A6%82%E6%9E%9C%E4%B8%8D%E5%B0%8F%E5%BF%83%E7%8C%9C%E5%88%B0%E4%BA%86%E5%BC%80%E5%BF%83%E8%AF%8D%E5%9C%BA%E5%92%8C%E7%99%BE%E8%AF%8D%E6%96%A9%E7%9A%84%E5%8A%A0%E5%AF%86%E6%96%B9%E6%B3%95%E8%AF%A5%E6%80%8E%E4%B9%88%E5%8A%9E/" /><link rel="prev" href="https://bihai.org/%E7%96%AB%E6%83%85%E6%9C%9F%E9%97%B4%E8%87%AA%E6%88%91%E4%BF%AE%E7%82%BC-%E6%90%9E%E4%B8%80%E6%90%9E%E8%80%81%E6%B8%B8%E6%88%8F%E8%B5%84%E6%BA%90%E8%A7%A3%E5%8C%85/" /><link rel="next" href="https://bihai.org/%E5%9B%BD%E5%86%85%E9%95%9C%E5%83%8F%E5%A4%A7%E5%85%A8%E9%83%A8%E5%88%86/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><script type="application/ld+json">
     {
@@ -39,7 +39,7 @@
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="bihai.org">bihai.org</a>
+            <a href="/" title="bihai.org-碧海瓯阁">bihai.org-碧海瓯阁</a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="/posts/"> 所有文章 </a><a class="menu-item" href="/tags/"> 标签 </a><a class="menu-item" href="/categories/"> 分类 </a><a class="menu-item" href="/categories/documentation/"> 文档 </a><a class="menu-item" href="/about/"> 关于 </a><a class="menu-item" href="https://github.com/bihai/bihai.org" title="GitHub" rel="noopener noreffer" target="_blank"><i class='fab fa-github fa-fw'></i>  </a><span class="menu-item delimiter"></span><a href="javascript:void(0);" class="menu-item language" title="选择语言">简体中文<i class="fas fa-chevron-right fa-fw"></i>
@@ -54,7 +54,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="bihai.org">bihai.org</a>
+                <a href="/" title="bihai.org-碧海瓯阁">bihai.org-碧海瓯阁</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
