--- a/破解了xxtea加密的大富翁9资源文件/index.html
+++ b/破解了xxtea加密的大富翁9资源文件/index.html
@@ -5,16 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-        <title>破解了XXTEA加密的《大富翁9》资源文件 - bihai.org</title><meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="破解了XXTEA加密的《大富翁9》资源文件" />
+        <title>破解了XXTEA加密的《大富翁9》资源文件 - bihai.org-碧海瓯阁</title><meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="破解了XXTEA加密的《大富翁9》资源文件" />
 <meta property="og:description" content="破解了XXTEA加密的《大富翁9》资源文件 没啥可以高兴的，只是比较好奇而已。 这种加密还是不错，快速简单，可以规避一般的恶意破解。 挺满意呵呵。" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/%E7%A0%B4%E8%A7%A3%E4%BA%86xxtea%E5%8A%A0%E5%AF%86%E7%9A%84%E5%A4%A7%E5%AF%8C%E7%BF%819%E8%B5%84%E6%BA%90%E6%96%87%E4%BB%B6/" />
-<meta property="og:site_name" content="bihai.org" />
+<meta property="og:site_name" content="bihai.org-碧海瓯阁" />
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="破解了XXTEA加密的《大富翁9》资源文件"/>
 <meta name="twitter:description" content="破解了XXTEA加密的《大富翁9》资源文件 没啥可以高兴的，只是比较好奇而已。 这种加密还是不错，快速简单，可以规避一般的恶意破解。 挺满意呵呵。"/>
-<meta name="application-name" content="bihai.org">
-<meta name="apple-mobile-web-app-title" content="bihai.org"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+<meta name="application-name" content="bihai.org-碧海瓯阁">
+<meta name="apple-mobile-web-app-title" content="bihai.org-碧海瓯阁"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://bihai.org/%E7%A0%B4%E8%A7%A3%E4%BA%86xxtea%E5%8A%A0%E5%AF%86%E7%9A%84%E5%A4%A7%E5%AF%8C%E7%BF%819%E8%B5%84%E6%BA%90%E6%96%87%E4%BB%B6/" /><link rel="prev" href="https://bihai.org/%E8%B6%8A%E7%8B%B1%E4%B9%8B%E5%90%8E%E5%A6%82%E4%BD%95%E8%BF%9C%E7%A8%8B%E8%BF%9E%E6%8E%A5sshios%E8%AE%BE%E5%A4%87/" /><link rel="next" href="https://bihai.org/%E7%96%AB%E6%83%85%E6%9C%9F%E9%97%B4%E8%87%AA%E6%88%91%E4%BF%AE%E7%82%BC-%E6%90%9E%E4%B8%80%E6%90%9E%E8%80%81%E6%B8%B8%E6%88%8F%E8%B5%84%E6%BA%90%E8%A7%A3%E5%8C%85/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><script type="application/ld+json">
     {
@@ -39,7 +39,7 @@
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="bihai.org">bihai.org</a>
+            <a href="/" title="bihai.org-碧海瓯阁">bihai.org-碧海瓯阁</a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="/posts/"> 所有文章 </a><a class="menu-item" href="/tags/"> 标签 </a><a class="menu-item" href="/categories/"> 分类 </a><a class="menu-item" href="/categories/documentation/"> 文档 </a><a class="menu-item" href="/about/"> 关于 </a><a class="menu-item" href="https://github.com/bihai/bihai.org" title="GitHub" rel="noopener noreffer" target="_blank"><i class='fab fa-github fa-fw'></i>  </a><span class="menu-item delimiter"></span><a href="javascript:void(0);" class="menu-item language" title="选择语言">简体中文<i class="fas fa-chevron-right fa-fw"></i>
@@ -54,7 +54,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="bihai.org">bihai.org</a>
+                <a href="/" title="bihai.org-碧海瓯阁">bihai.org-碧海瓯阁</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
