--- a/首次使用hookapi暴力破解sqlite3加密的数据库/index.html
+++ b/首次使用hookapi暴力破解sqlite3加密的数据库/index.html
@@ -5,16 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-        <title>首次使用HOOKAPI暴力破解SQLITE3加密的数据库 - bihai.org</title><meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="首次使用HOOKAPI暴力破解SQLITE3加密的数据库" />
+        <title>首次使用HOOKAPI暴力破解SQLITE3加密的数据库 - bihai.org-碧海瓯阁</title><meta name="Description" content="关于 bhLoveIt 主题"><meta property="og:title" content="首次使用HOOKAPI暴力破解SQLITE3加密的数据库" />
 <meta property="og:description" content="怕原作者生气，在这就不放源代码了。 最近研究“给力大CI典”的时候，反汇编了一下，是用DELPHI写的，使用SQLITE3定制版本加密了一部分" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://bihai.org/%E9%A6%96%E6%AC%A1%E4%BD%BF%E7%94%A8hookapi%E6%9A%B4%E5%8A%9B%E7%A0%B4%E8%A7%A3sqlite3%E5%8A%A0%E5%AF%86%E7%9A%84%E6%95%B0%E6%8D%AE%E5%BA%93/" />
-<meta property="og:site_name" content="bihai.org" />
+<meta property="og:site_name" content="bihai.org-碧海瓯阁" />
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="首次使用HOOKAPI暴力破解SQLITE3加密的数据库"/>
 <meta name="twitter:description" content="怕原作者生气，在这就不放源代码了。 最近研究“给力大CI典”的时候，反汇编了一下，是用DELPHI写的，使用SQLITE3定制版本加密了一部分"/>
-<meta name="application-name" content="bihai.org">
-<meta name="apple-mobile-web-app-title" content="bihai.org"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+<meta name="application-name" content="bihai.org-碧海瓯阁">
+<meta name="apple-mobile-web-app-title" content="bihai.org-碧海瓯阁"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://bihai.org/%E9%A6%96%E6%AC%A1%E4%BD%BF%E7%94%A8hookapi%E6%9A%B4%E5%8A%9B%E7%A0%B4%E8%A7%A3sqlite3%E5%8A%A0%E5%AF%86%E7%9A%84%E6%95%B0%E6%8D%AE%E5%BA%93/" /><link rel="next" href="https://bihai.org/%E8%B6%8A%E7%8B%B1%E4%B9%8B%E5%90%8E%E5%A6%82%E4%BD%95%E8%BF%9C%E7%A8%8B%E8%BF%9E%E6%8E%A5sshios%E8%AE%BE%E5%A4%87/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><script type="application/ld+json">
     {
@@ -39,7 +39,7 @@
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="bihai.org">bihai.org</a>
+            <a href="/" title="bihai.org-碧海瓯阁">bihai.org-碧海瓯阁</a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="/posts/"> 所有文章 </a><a class="menu-item" href="/tags/"> 标签 </a><a class="menu-item" href="/categories/"> 分类 </a><a class="menu-item" href="/categories/documentation/"> 文档 </a><a class="menu-item" href="/about/"> 关于 </a><a class="menu-item" href="https://github.com/bihai/bihai.org" title="GitHub" rel="noopener noreffer" target="_blank"><i class='fab fa-github fa-fw'></i>  </a><span class="menu-item delimiter"></span><a href="javascript:void(0);" class="menu-item language" title="选择语言">简体中文<i class="fas fa-chevron-right fa-fw"></i>
@@ -54,7 +54,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="bihai.org">bihai.org</a>
+                <a href="/" title="bihai.org-碧海瓯阁">bihai.org-碧海瓯阁</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
