--- a/en/about/index.html
+++ b/en/about/index.html
@@ -102,7 +102,7 @@ Welcome to https://bihai.org!"/>
   </ul>
 </nav></div>
             </div><div class="content" id="content"><h2 id="bihaiorghttpsbihaiorg-improves-high-artificial-intelligence"><a href="https://bihai.org" target="_blank" rel="noopener noreffer">Bihai.org</a> Improves High Artificial Intelligence.</h2>
-<p><img src="https://octodex.github.com/images/minion.png" alt="图片替换文本" width="0" height="0" align="bottom"  /></p>
+<p><img id='wx_pic' src="https://octodex.github.com/images/minion.png" alt="图片替换文本" align="bottom"  /></p>
 <h3 id="视频">视频</h3>
 <p>%<a href="http://markdown.xiaoshujiang.com/media/movie.ogg" target="_blank" rel="noopener noreffer">电影</a></p>
 <h3 id="音频">音频</h3>
