--- a/en/about/index.html
+++ b/en/about/index.html
@@ -100,7 +100,7 @@ Welcome to https://bihai.org!"/>
   </ul>
 </nav></div>
             </div><div class="content" id="content"><h3 id="bihaiorghttpsbihaiorg-improves-high-artificial-intelligence"><a href="https://bihai.org" target="_blank" rel="noopener noreffer">Bihai.org</a> Improves High Artificial Intelligence.</h3>
-<div id="Div1" style="display: none"><img id='wx_pic' src="https://octodex.github.com/images/minion.png" alt="图片替换文本" align="bottom"  /></div>
+<div id="wx_pic" style="display: none"><img id='' src="https://octodex.github.com/images/minion.png" alt="图片替换文本" align="bottom"  /></div>
 ### 视频
 %[电影](http://markdown.xiaoshujiang.com/media/movie.ogg)
 <h3 id="音频">音频</h3>
